Fully tested office hours area backend
